@@ -23,6 +23,9 @@
 <!ENTITY enterkey "<keycap>Enter</keycap>">
 <!ENTITY MSG-YES "<userinput>Yes</userinput>">
 <!ENTITY MSG-NO "<userinput>No</userinput>">
+<!ENTITY BTN-CONT "<guibutton>Continue</guibutton>">
+<!ENTITY BTN-CANCEL "<guibutton>Cancel</guibutton>">
+<!ENTITY BTN-GOBACK "<guibutton>Go Back</guibutton>">
 
 <!-- notation used for 'megabytes' -->
 <!ENTITY notation-megabytes "MB">
