@@ -47,6 +47,9 @@ translations and to have it in place for the next release, Lenny.
 - enterkey
 - MSG-YES
 - MSG-NO
+- BTN-CONT
+- BTN-CANCEL
+- BTN-GOBACK
 
 Some other entities can be localized as well.
 
