@@ -1,4 +1,7 @@
 <!ENTITY MSG-YES "<userinput>Ja</userinput>">
 <!ENTITY MSG-NO "<userinput>Nee</userinput>">
+<!ENTITY BTN-CONT "<guibutton>Volgende</guibutton>">
+<!ENTITY BTN-CANCEL "<guibutton>Annuleren</guibutton>">
+<!ENTITY BTN-GOBACK "<guibutton>Terug</guibutton>">
 
 <!ENTITY archive-mirror "ftp.nl.debian.org">
