@@ -88,8 +88,8 @@ need to know. To expand a collapsed list (used for example for the selection
 of countries within continents), you can use the <keycap>+</keycap> and
 <keycap>-</keycap> keys. For questions where more than one item can be
 selected (e.g. task selection), you first need to tab to the
-<guibutton>Continue</guibutton> button after making your selections; hitting
-enter will toggle a selection, not activate <guibutton>Continue</guibutton>.
+&BTN-CONT; button after making your selections; hitting
+enter will toggle a selection, not activate &BTN-CONT;.
 
 </para><para>
 
