@@ -46,7 +46,7 @@ patch is included in the <application>System Disk 2.3.1</application>
 utility, available from Apple at
 <ulink url="ftp://ftp.apple.com/developer/macosxserver/utilities/SystemDisk2.3.1.smi.bin"></ulink>.
 After unpacking the utility in MacOS, and launching it, select the
-<guibutton>Save button</guibutton> to have the firmware patches
+<guibutton>Save</guibutton> button to have the firmware patches
 installed to nvram.
 
 </para>
