@@ -89,7 +89,7 @@ Web server: <classname>apache</classname>.
 </para></note>
 <para>
 
-Once you've selected your tasks, select <guibutton>OK</guibutton>. At this
+Once you've selected your tasks, select &BTN-CONT;. At this
 point, <command>aptitude</command> will install the packages that are part
 of the tasks you've selected.
 
