@@ -26,8 +26,9 @@ at the same time.
 
 If you cannot switch consoles, there is also an <guimenuitem>Execute
 a Shell</guimenuitem> item on the main menu that can be used to start
-a shell. To get back to the installer itself, type
-<userinput>exit</userinput> to close the shell.
+a shell. You can get to the main menu from most dialogs by using the 
+&BTN-GOBACK; button one or more times. Type <userinput>exit</userinput>
+to close the shell and return to the installer.
 
 </para><para>
 
