@@ -8,7 +8,7 @@
 
 The main &architecture; boot loader is called <quote>grub</quote>.
 Grub is a flexible and robust boot loader and a good default choice for
-newbies and old hands alike.
+new users and old hands alike.
 
 </para><para>
 
@@ -18,9 +18,8 @@ can install it elsewhere. See the grub manual for complete information.
 
 </para><para>
 
-If you do not want to install grub at all, use the Back button to get to
-the main menu, and from there select whatever bootloader you would like to
-use.
+If you do not want to install grub, use the &BTN-GOBACK; button to get to the
+main menu, and from there select whatever bootloader you would like to use.
 
 </para>
   </sect3>
