@@ -127,7 +127,7 @@ to resolve the problem, and in that case the menu may appear.
 
 </para><para>
 
-You can get to the main menu by selecting the <quote>Back</quote> button
+You can get to the main menu by selecting the &BTN-GOBACK; button
 repeatedly to back all the way out of the currently running component.
 
 </para></listitem>
