@@ -14,8 +14,9 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
     now loaded automatically.
   * Fix incorrect instruction for preseeding local repositories.
     Thanks to Rémi Demarthe. Closes: #420894.
+  * Add translatable entities for Continue, Cancel and Go Back buttons.
 
- -- Frans Pop <fjp@debian.org>  Wed, 25 Apr 2007 11:48:29 +0200
+ -- Frans Pop <fjp@debian.org>  Mon,  7 May 2007 17:25:28 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
